@@ -30,6 +30,10 @@ Revision history for Perl extension App::Sqitch
        `deploy_dir`, `revert_dir`, or `verify_dir` settings. I think these
        settings are not commonly used, and it would start to get crowded if we
        also added their "reworked" variants, which will be used still less.
+     - Added the `alter` action to the `engine` command to set engine
+       properties.
+     - Deprecated the `set-*` actions in the `engine` command in favor of the
+       new `alter` action.
      - Added support for setting reworked directories to the `engine` command.
      - Reformatted the output of the `engine` command's `show` action include
        reworked directories, and to bit a bit less flat.
